--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,10 +11,10 @@ $clr-tertiary: #99E2D0;
 $clr-alt: #d6d6d6;
 
 /*images Variables */
-$img-palette: '../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg';
-$img-note: '../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg';
-$img-francaise: '../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg';
-$img-delice: '../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg';
+$img-palette: '../img/jay-wennington.jpg';
+$img-note: '../img/stil.jpg';
+$img-francaise: '../img/toa-heftiba.jpg';
+$img-delice: '../img/louis-hansel-shotsoflouis.jpg';
 
 
 /*Shadows Variables */
